--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">DATA ANALYST</a>
+						<a href="index.html" class="logo">BUSINESS INTELLIGENCE ANALYST</a>
 					</header>
 
 				<!-- Nav -->
@@ -200,4 +200,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
