Update new project on portfolio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Cynthia Nafula Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in Python, Power BI, SQL, Excel, Tableau and Power Platform. Relevant skills in data cleaning, data visualization, data storytelling and webscraping  <a href="https://github.com/CynieC">@CynieC</a>
+						<p>Business Intelligence Analyst skilled in SQL, Excel, Looker Studio and Power Platform. Relevant skills in data cleaning, data visualization, data storytelling and webscraping  <a href="https://github.com/CynieC">@CynieC</a>
 					 <a href=></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -59,11 +59,11 @@
 							
 									<h2><a href="https://github.com/CynieC/Mediterannean-Camera-Company">Data Visualization in Power BI<br />
 									</a></h2>
-									<p>In this project, I conducted EDA of Medittarennean Camera Company dataset to present an Executive overview and Product Data Analysis.The report presents trends of products and countries of sales.The main tool used for the analysis is Power BI.</p>
+									<p>This project analyzes the financial and behavioral impact of increasing the initial loan amount offered to new customers from Ksh 5,000 to Ksh 7,000. Using SQL Server for data analysis and BI tools for visualization, the analysis compares repayment behavior, default risk, repeat borrowing, and profitability between the two customer cohorts. The goal is to provide data-driven insights to inform lending strategy and risk management decisions.</p>
 								</header>
-								<a href="https://github.com/CynieC/Mediterannean-Camera-Company" class="image main"><img src="images/medit.png" alt="" /></a>
+								<a href="https://github.com/CynieC/A-B_Testing_Report" class="image main"><img src="images/medit.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/CynieC/Mediterannean-Camera-Company" class="button large">View Project</a></li>
+									<li><a href="https://github.com/CynieC/A-B_Testing_Reporty" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -202,3 +202,4 @@
 	</body>
 
 </html>
+
