--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									</a></h2>
 									<p>This project analyzes the financial and behavioral impact of increasing the initial loan amount offered to new customers from Ksh 5,000 to Ksh 7,000. Using SQL Server for data analysis and BI tools for visualization, the analysis compares repayment behavior, default risk, repeat borrowing, and profitability between the two customer cohorts. The goal is to provide data-driven insights to inform lending strategy and risk management decisions.</p>
 								</header>
-								<a href="https://github.com/CynieC/A-B_Testing_Report" class="image main"><img src="images\AB Testing current.png" alt="" /></a>
+								<a href="https://github.com/CynieC/A-B_Testing_Report" class="image main"><img src="images/AB Testing current.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/CynieC/A-B_Testing_Report" class="button large">View Project</a></li>
 								</ul>
@@ -75,7 +75,7 @@
 										<h2><a href="https://github.com/CynieC/RFM-ANALYSIS"> RFM Analysis in Fintech Lending Company<br />
 								
 									</header>
-									<a href="https://github.com/CynieC/RFM-ANALYSIS" class="image fit"><img src="images\RFM_Analysis.png" alt="" /></a>
+									<a href="https://github.com/CynieC/RFM-ANALYSIS" class="image fit"><img src="images/RFM_Analysis.png" alt="" /></a>
 									<p>This project performs RFM (Recency, Frequency, Monetary) and Customer Lifetime Value (CLTV) analysis on customers of a digital lending company using SQL Server. Insights are designed to support customer segmentation, retention strategies, and data-driven credit and marketing decisions. The project focuses on analytical methodology and logic, with SQL examples included for reference.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/CynieC/RFM-ANALYSIS" class="button">view Project</a></li>
@@ -202,6 +202,7 @@
 	</body>
 
 </html>
+
 
 
 
